# my-ctf

2018/0ctf/Provisioning/: README.md  recover.py  solve.py
2018/0ctf/g0g0g0/: README.md  answer10  client.py  flag  gen.sh  gogo.go  input  solve.py  verifier.py
2019/0ctf/sanitize/: Makefile  README.md  flag  sanitize.c
2019/0ctf/sixology/: README.md
2019/0ctf/sixology/IDA/: 0ctf.hpp  CMakeLists.txt  ana.cpp  emu.cpp  ins.cpp  ins.hpp  out.cpp  reg.cpp
2019/0ctf/sixology/src/: assembler.py  binary  generator.py  sixology.s  solve.py  vm.py
2019/0ctf/wasabi/: README.md
2019/0ctf/wasabi/solution/: solve.py
2019/0ctf/wasabi/src/: Makefile  generate_step2.py  generate_step3.py  option.h  sha.h  sha512.c  step1.h  step2.h
2019/0ctf/wasi/release/: flag.wasabi
2019/0ctf/wasi/src/: Makefile.linux  check_diff.py  config.h  main.cpp  option.cpp  step1.cpp  step3.cpp  step3.h  utils.cpp  utils.h  zerology.cpp  zerology.h
